Fix over background in css

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ body{
 	font-size: 1em;
 	font-family: arial;
 	  /* Location of the image */
-  background-image: url(images/background-photo.jpg);
+  background-image: url(../images/front-login/fondo.jpg);
   
   /* Image is centered vertically and horizontally at all times */
   background-position: center center;
