--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,28 +1,20 @@
 body{
 	font-size: 1em;
 	font-family: arial;
-	  /* Location of the image */
-  background-image: url(../images/front-login/fondo.jpg);
-  
-  /* Image is centered vertically and horizontally at all times */
-  background-position: center center;
-  
-  /* Image doesn't repeat */
-  background-repeat: no-repeat;
-  
-  /* Makes the image fixed in the viewport so that it doesn't move when 
-     the content height is greater than the image height */
-  background-attachment: fixed;
-  
-  /* This is what makes the background image rescale based on its container's size */
-  background-size: cover;
-  
-  /* Pick a solid background color that will be displayed while the background image is loading */
-  background-color:#464646;
-  
-  /* SHORTHAND CSS NOTATION
-   * background: url(background-photo.jpg) center center cover no-repeat fixed;
-   */
+
+	background-image: url(../images/front-login/fondo.jpg);
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
+	background-color:#464646;
+}
+
+.box{
+    width: 600px;
+    height: 400px;
+    background-color: lavender;
+    border: solid 1px silver;
 }
 
 header{
