--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,7 +13,7 @@ body{
 .box{
     width: 600px;
     height: 400px;
-    background-color: lavender;
+    background-color: white;
     border: solid 1px silver;
 }
 
