--- a/css/estilos.css
+++ b/css/estilos.css
@@ -19,6 +19,13 @@ body{
     opacity: 0.8;
     filter: alpha(opacity=100); /* For IE8 and earlier */
 }
+div.box p {
+
+	margin: 5%;
+    font-weight: bold;
+    color: #000000;
+
+}
 
 header{
 	margin: 0;
